--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>::example1::</title>
-    <meta name="viewport" content="width=device-width,initial-sacle=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
@@ -15,12 +15,14 @@
     <h2>
       muntaj
     </h2><hr>
-    <a href="mailto:muntajshaik88888@gmail.com">muntajshaik88888@gmail.com
+    <a href="mailto:muntajshaik88888@gmail.com">muntajshaik88888@ gmail.com
   </a>
   </div>
   <!--content info-->
-  <div class="child2">
+  <div class="child2" id="child2">
   </div>
+  <script type="text/javascript" src="main.js">
+  </script>
 </div>
   </body>
 </html>
